# otus-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_version.cpp
.github/workflows/: release.yml
